@@ -1,25 +1,26 @@
 plugins {
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "20"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
+}
+
 dependencies {
-    implementation 'org.openjfx:javafx-base:20:win'  // Замените 'win' на вашу ОС: 'linux' или 'mac'
-    implementation 'org.openjfx:javafx-controls:20:win'
-    implementation 'org.openjfx:javafx-graphics:20:win'
-    implementation 'org.openjfx:javafx-fxml:20:win'
+    implementation 'org.openjfx:javafx-base:20'
+    implementation 'org.openjfx:javafx-controls:20'
+    implementation 'org.openjfx:javafx-fxml:20'
+    implementation 'org.openjfx:javafx-media:20'
 }
 
 application {
-    mainClass = 'me.draimgoose.Main'
-    applicationDefaultJvmArgs = [
-            '--module-path',
-            'C:/javafx-sdk-22.0.2/lib',  // Замените на путь к вашей папке lib JavaFX
-            '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
+    mainClass = 'me.draimgoose.Main'  // Укажите ваш главный класс здесь
 }
 
 
